# Wardrobe

./: README.md  io.github.swordpuffin.wardrobe.json  meson.build
data/: io.github.swordpuffin.wardrobe.desktop.in  io.github.swordpuffin.wardrobe.gschema.xml  io.github.swordpuffin.wardrobe.metainfo.xml.in  io.github.swordpuffin.wardrobe.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  it.po  meson.build  nl.po  pt_BR.po  vi.po  wardrobe.pot
src/: main.py  meson.build  styles.css  utils.py  wardrobe.gresource.xml  wardrobe.in  wardrobe.py  window.py  window.ui
src/widgets/: install_page.py  main_page.py  search_page.py  theme_cell.py  theme_cell_flowbox.py  theme_page.py
